--- a/CSS/inicioStyle.css
+++ b/CSS/inicioStyle.css
@@ -70,6 +70,28 @@ nav {
 .nav-section li a:hover::after {
     transform: scaleX(0.8);
 }
+
+/* .nav-section li {
+    transform: translateY(30px);
+    opacity: 0;
+    animation: popIn 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+}
+
+.nav-section li:nth-child(1) { animation-delay: 0.8s; }
+.nav-section li:nth-child(2) { animation-delay: 0.9s; }
+.nav-section li:nth-child(3) { animation-delay: 1.0s; }
+.nav-section li:nth-child(4) { animation-delay: 1.1s; }
+
+@keyframes popIn {
+    0% {
+        opacity: 0;
+        transform: translateY(45px) scale(0.8);
+    } 100% {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+}
+ */
 .logo{
     position: absolute;
     left: 50%;
