--- a/CSS/contactos.css
+++ b/CSS/contactos.css
@@ -28,6 +28,15 @@ html {
     --button-line: #000000;
 }
 
+@view-transition{
+    navigation: auto;
+}
+
+:view-transition-group(*) {
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+} 
+
 body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
