--- a/CSS/inicioStyle.css
+++ b/CSS/inicioStyle.css
@@ -14,6 +14,16 @@
     --shadow: rgba(255, 255, 255, 0.3);
 }
 
+@view-transition{
+    navigation: auto;
+}
+
+::view-transition-group(*) {
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+}
+
 body {
     background-color: var(--background);
     color: var(--text-primary);
@@ -98,6 +108,7 @@ nav {
     transform: translateX(-50%);
     height: 60px;
 }
+
 .logo img{
     height: 100%;
     object-fit: contain;
