--- a/CSS/noticia1.css
+++ b/CSS/noticia1.css
@@ -14,6 +14,14 @@
     --shadow: rgba(255, 255, 255, 0.3);
 }
 
+@view-transition{
+    navigation: auto;
+}
+
+:view-transition-group(*) {
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+} 
 
 body {
     margin: 0;
