--- a/CSS/noticiaOtro.css
+++ b/CSS/noticiaOtro.css
@@ -14,6 +14,16 @@
     --shadow: rgba(255, 255, 255, 0.3);
 }
 
+@view-transition{
+    navigation: auto;
+}
+
+:view-transition-group(*) {
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+} 
+
+
 html, body {
     height: 100%;
     margin: 0;
