--- a/CSS/scootering.css
+++ b/CSS/scootering.css
@@ -14,6 +14,15 @@
     --shadow: rgba(255, 255, 255, 0.3);
 }
 
+@view-transition{
+    navigation: auto;
+}
+
+:view-transition-group(*) {
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+} 
+
 body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
