--- a/CSS/inicioStyle.css
+++ b/CSS/inicioStyle.css
@@ -81,6 +81,18 @@ nav {
     transform: scaleX(0.8);
 }
 
+.separador{
+    width: 80%;
+}
+.cambioColor{
+    color: white;
+    font-size: 16px;
+    cursor: default;
+    user-select: none;
+    padding: 0 10px;
+    text-align: center;
+}
+
 /* .nav-section li {
     transform: translateY(30px);
     opacity: 0;
@@ -126,7 +138,7 @@ nav {
 }
 .headerimg{
     width: 100%;
-    transform: translateY(-50px);
+    transform: translateY(0px);
     animation: bajar 1s ease-out forwards;
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
 }
