--- a/CSS/cultura.css
+++ b/CSS/cultura.css
@@ -3,7 +3,7 @@
     --text-primary: #000000;
     --border-color: #000000;
     --background-side: #000000;
-    --shadow: rgba(0, 0, 0, 0.3);
+    --shadow: rgba(0, 0, 0, 1);
 }
 
 @view-transition{
@@ -114,7 +114,17 @@ nav {
     top: 20px;
 }
 
-
+.separador{
+    width: 80%;
+}
+.cambioColor{
+    color: white;
+    font-size: 16px;
+    cursor: default;
+    user-select: none;
+    padding: 0 10px;
+    text-align: center;
+}
 
 /*Body de cultura*/
 
@@ -157,35 +167,28 @@ nav {
     width: 100vw;
 
 }
-.footer-new{
-    position: relative;
-    top: 10px;
-    color: var(--text-primary);
-}
-.link a{
-    color: var(--text-primary);
-    font-size: 15px;
-    position: relative;
-    top: 20px;
-}
 .texto-imagen{
     position: absolute; 
     left: 20vw;
     width: 80%;
     white-space: nowrap;
     top: 40vh ;  
-    color: var(--text-primary);
+    color: white;
     font-size: 4rem;
 }
 .imagen1{
     position: relative;
     width: 80%;
     height: 70%;
+    right: 20px;
     top: 4%;
     margin: 20 auto;
     display: flex;
-    opacity: 0.5;
+    opacity: 0.8;
     background-attachment:fixed;
+}
+.imagen1 img{
+    border-bottom: px solid black;
 }
 
 
@@ -196,27 +199,13 @@ nav {
     transform: translateZ(0); 
 }
 
-    
-.contenedorLinea1 {
-    display: flex;
-    justify-content: center; 
-    align-items: center;    
-    height: 0%;
-    position: absolute;
-    top: 121%;
-}
-.linea-horizontal {
-    width: 100vw;
-    height: 2px;
-    background-color: var(--border-color);
-}
+
 
 /* La informacion */
 
 
 h1.titulo-info {
-    position: relative;
-    left:25vw;
+    text-align: center;
     font-size: 20px;
 }
 
@@ -236,7 +225,12 @@ div.container.info{
 img.info-collage {
     width: 320px;
     height: 450px;
-    box-shadow: 0px 0px 15px var(--shadow);
+    box-shadow: 0px 0px 45px var(--shadow);
+    border-radius: 5px;
+}
+img.info-collage:hover {
+    box-shadow: 0px 0px 65px var(--shadow);
+    transition: box-shadow 0.3s ease;
 }
 .contenedor-img{    
     display: flex;
@@ -247,9 +241,10 @@ img.info-collage {
 }
 .linea-separadora {
     position: relative;
+    left: 50px;
     width: 80%;
     height: 2px;
-    background-color: black;
+    background-color: var(--border-color);
     margin: 2% 2% 2% 5%;
 }
 
@@ -262,11 +257,11 @@ img.info{
     height: 40%;
     transition: opacity 0.3s ease;
     background-color: var(--background);
+    border-radius: 5px;
 }
 
 
 img.info:hover{
-    cursor: pointer;
     opacity: 25%;
 
 }
