--- a/CSS/deportes.css
+++ b/CSS/deportes.css
@@ -101,6 +101,17 @@ nav {
         flex-wrap: wrap;
     }
 }
+.separador{
+    width: 80%;
+}
+.cambioColor{
+    color: white;
+    font-size: 16px;
+    cursor: default;
+    user-select: none;
+    padding: 0 10px;
+    text-align: center;
+}
 /*Finaliza el nav*/
 
 /*header*/
@@ -191,14 +202,19 @@ section{
     gap: 30px;
 }
 summary{
-    background: #9f9f9fd7;
     color: var(--text-primary);
-    padding: 20px;
+    padding: 15px;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
+    border: var(--border-color) 1px solid;
     box-shadow: var(--shadow);
 }
-
+.animated-details .contenido {
+  overflow: hidden;
+  height: 0;
+  opacity: 0;
+  transition: height 0.4s ease, opacity 0.4s ease;
+}
 .titulo1{
     font-size: 20px;
     position: relative;
@@ -406,6 +422,13 @@ summary{
 
 .flipcard .back li{
     letter-spacing: 1px;
+}
+.flipcard .back .lista1{
+    letter-spacing: 1px;
+    margin: 8px;
+    list-style: none;
+    position: relative;
+    right: 3%;
 }
 
 .flipcard:hover .front{
