--- a/CSS/laintShop.css
+++ b/CSS/laintShop.css
@@ -14,6 +14,10 @@
     --shadow: rgba(255, 255, 255, 0.3);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 @view-transition{
     navigation: auto;
 }
@@ -30,7 +34,17 @@ body {
     color: var(--text-primary);
     transition: background-color 0.3s ease, color 0.3s ease;
 } 
-
+.separador{
+    width: 80%;
+}
+.cambioColor{
+    color: white;
+    font-size: 16px;
+    cursor: default;
+    user-select: none;
+    padding: 0 10px;
+    text-align: center;
+}
 nav {
     font-family: Arial, sans-serif;
     position: fixed;
@@ -176,6 +190,7 @@ nav {
         flex-wrap: wrap;
     }
 }
+
 /*Header*/
 .headerimg{
     width: 100%;
@@ -473,10 +488,6 @@ nav {
 .prendas.reveal.visible {
     opacity: 1;
     transform: translateY(0) scale(1);
-}
-
-html {
-    scroll-behavior: smooth;
 }
 
 .footer.reveal {
