--- a/CSS/noticia.css
+++ b/CSS/noticia.css
@@ -157,11 +157,12 @@ nav {
 }
 
 summary {
-    color: rgb(0, 0, 0);
+    color: var(--text-primary);
     padding: 15px;
     cursor: pointer;
     border-radius: 5px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    border: var(--border-color) 1px solid;
+    box-shadow: var(--shadow);
 }
 
 .lista-obras li {
@@ -310,7 +311,17 @@ footer.footer-new {
     text-align: center;
     position: relative;
 }
-
+.separador{
+    width: 80%;
+}
+.cambioColor{
+    color: white;
+    font-size: 16px;
+    cursor: default;
+    user-select: none;
+    padding: 0 10px;
+    text-align: center;
+}
 .side-menu a:hover { color: #aaa; }
 
 .close-btn {
