--- a/CSS/sign.css
+++ b/CSS/sign.css
@@ -1,4 +1,7 @@
 /*nav*/
+html{
+    overflow-y: scroll;
+}
 nav {
     position: fixed;
     top: 0;
@@ -82,7 +85,7 @@ nav {
 
 
 body {
-    height: 98vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -102,7 +105,7 @@ body {
     overflow: hidden;
     box-shadow: 0 0 10px rgb(0, 0, 0, 0.3);
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
