--- a/CSS/noticia.css
+++ b/CSS/noticia.css
@@ -138,6 +138,7 @@ nav {
     height: 450px;
     border: 1px solid white;
     border-radius: 5px;
+    margin-left: 120px;
 }
 
 .parrafoNoticia {
